--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,10 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <!--            <groupId>com.h2database</groupId>-->
+            <!--            <artifactId>h2</artifactId>-->
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
