--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8080
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 
+#h2 db
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:file:../recipes_db
 #spring.datasource.username=sa
@@ -13,8 +14,16 @@ management.endpoint.shutdown.enabled=true
 #spring.jpa.show-sql=true
 #hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+#postgres db
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://pg:5432/messages
-spring.datasource.username=admin
-spring.datasource.password=admin123
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
+#for docker usage
+#spring.datasource.url=jdbc:postgresql://pg:5432/messages
+#spring.datasource.username=admin
+#spring.datasource.password=admin123
+
+#for local usage
+spring.datasource.url=jdbc:postgresql://localhost:5432/messages
+spring.datasource.username=myuser
+spring.datasource.password=start123
