--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,11 +19,11 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
 #for docker usage
-#spring.datasource.url=jdbc:postgresql://pg:5432/messages
-#spring.datasource.username=admin
-#spring.datasource.password=admin123
+spring.datasource.url=jdbc:postgresql://pg:5432/messages
+spring.datasource.username=admin
+spring.datasource.password=admin123
 
 #for local usage
-spring.datasource.url=jdbc:postgresql://localhost:5432/messages
-spring.datasource.username=myuser
-spring.datasource.password=start123
+#spring.datasource.url=jdbc:postgresql://localhost:5432/messages
+#spring.datasource.username=myuser
+#spring.datasource.password=start123
